tests/invalid/type_spec.err_exp
type_spec.m:012: Error: `:- pragma external_pred' declaration in module
type_spec.m:012:   interface.
type_spec.m:014: In `:- pragma type_spec' declaration for predicate
type_spec.m:014:   `type_spec.type_spec1'/1:
type_spec.m:014:   error: variable `U' does not occur in the `:- pred'
type_spec.m:014:   declaration.
type_spec.m:015: Error: `:- pragma type_spec' declaration for
type_spec.m:015:   `type_spec.type_spec1'/1 specifies non-existent mode.
type_spec.m:017: Error: `:- pragma type_spec' declaration for `type_spec1'/2
type_spec.m:017:   without corresponding `:- pred' or `:- func' declaration.
type_spec.m:017:   `type_spec1' does exist with arity 1.
type_spec.m:026: Error: `:- pragma external_pred' declaration in module
type_spec.m:026:   interface.
type_spec.m:028: In `:- pragma type_spec' declaration for predicate
type_spec.m:028:   `type_spec.type_spec2'/1:
type_spec.m:028:   error: the substitution includes the existentially
type_spec.m:028:   quantified type variable `U'.
type_spec.m:030: In `:- pragma type_spec' declaration for predicate
type_spec.m:030:   `type_spec.type_spec2'/1:
type_spec.m:030:   error: variable `U' occurs on both sides of the
type_spec.m:030:   substitution.
type_spec.m:032: In `:- pragma type_spec' declaration for predicate
type_spec.m:032:   `type_spec.type_spec2'/1:
type_spec.m:032:   error: variable `U' has multiple replacement types.
